# argos3-epuck

./: .gitignore  How_To_Cite  LICENSE  README  README.asciidoc
firmware/firmware/: CMakeLists.txt  datatypes.h  real_epuck_base.h
firmware/firmware/I2C/: CMakeLists.txt  e_I2C_master_module.c  e_I2C_master_module.h  e_I2C_protocol.c  e_I2C_protocol.h
firmware/firmware/a_d/: CMakeLists.txt  e_accelerometer.c  e_accelerometer.h  e_ad_conv.c  e_ad_conv.h  e_micro.c  e_micro.h  e_prox.c  e_prox.h
firmware/firmware/a_d/advance_ad_scan/: CMakeLists.txt  e_acc.c  e_acc.h  e_ad_conv.c  e_micro.c  e_prox.c  e_prox.h
firmware/firmware/a_d/advance_ad_scan_backuppo/: CMakeLists.txt  e_acc.h  e_ad_conv.c  e_ad_conv.h  e_micro.c  e_prox.c
firmware/firmware/battery_level/: ..hex  CMakeLists.txt  battery.c
firmware/firmware/bluetooth/: CMakeLists.txt
firmware/firmware/btcom/: CMakeLists.txt  btcom.c  btcom.h  makefile
firmware/firmware/firmware/: CMakeLists.txt  epuck_firmware.c
firmware/firmware/ircom/: CMakeLists.txt  ircom.c  ircomReceive.c  ircomSend.c  ircomTools.c  makefile
firmware/firmware/motor_led/: CMakeLists.txt  e_epuck_ports.h  e_init_port.c  e_init_port.h  e_led.c  e_led.h  e_motors.c  e_motors.h
firmware/firmware/motor_led/advance_one_timer/: CMakeLists.txt  e_led.c  e_led.h  e_motors.c  e_motors.h  e_remote_control.c  e_remote_control.h
firmware/firmware/randb/: e_randb.h
firmware/firmware/uart/: CMakeLists.txt  e_epuck_ports.inc  e_init_uart2.s  e_uart1_rx_char.s  e_uart1_tx_char.s  e_uart2_rx_char.s  e_uart2_tx_char.s  e_uart_char.h
src/: CMakeLists.txt
src/cmake/: ARGoSBuildChecks.cmake  ARGoSBuildFlags.cmake  FindLua53.cmake  TargetEPuck.cmake
src/plugins/robots/: CMakeLists.txt
src/plugins/robots/e-puck/: CMakeLists.txt  Interface.cmake  RealLibrary.cmake  SimLibrary.cmake  VisionTools.cmake
src/plugins/robots/e-puck/control_interface/: ci_epuck_accelerometer_sensor.cpp  ci_epuck_accelerometer_sensor.h  ci_epuck_base_leds_actuator.cpp  ci_epuck_base_leds_actuator.h  ci_epuck_battery_sensor.cpp  ci_epuck_battery_sensor.h  ci_epuck_camera_sensor.h  ci_epuck_encoder_sensor.cpp  ci_epuck_encoder_sensor.h  ci_epuck_front_camera_sensor.h  ci_epuck_ground_sensor.cpp  ci_epuck_ground_sensor.h  ci_epuck_ircom_actuator.cpp  ci_epuck_ircom_actuator.h  ci_epuck_ircom_sensor.h  ci_epuck_light_sensor.cpp  ci_epuck_light_sensor.h  ci_epuck_micro_sensor.cpp  ci_epuck_micro_sensor.h  ci_epuck_omnidirectional_camera_sensor.cpp  ci_epuck_omnidirectional_camera_sensor.h  ci_epuck_proximity_sensor.cpp  ci_epuck_proximity_sensor.h  ci_epuck_range_and_bearing_actuator.cpp  ci_epuck_range_and_bearing_actuator.h  ci_epuck_range_and_bearing_sensor.cpp  ci_epuck_range_and_bearing_sensor.h  ci_epuck_rgb_leds_actuator.cpp  ci_epuck_rgb_leds_actuator.h  ci_epuck_virtual_camrab_actuator.cpp  ci_epuck_virtual_camrab_actuator.h  ci_epuck_virtual_camrab_sensor.cpp  ci_epuck_virtual_camrab_sensor.h  ci_epuck_wheels_actuator.cpp  ci_epuck_wheels_actuator.h
src/plugins/robots/e-puck/real_robot/: real_epuck.cpp  real_epuck.h  real_epuck_accelerometer_sensor.cpp  real_epuck_accelerometer_sensor.h  real_epuck_base.cpp  real_epuck_base.h  real_epuck_base_leds_actuator.cpp  real_epuck_base_leds_actuator.h  real_epuck_battery_sensor.cpp  real_epuck_battery_sensor.h  real_epuck_ground_sensor.cpp  real_epuck_ground_sensor.h  real_epuck_i2c_actuator.h  real_epuck_i2c_device.cpp  real_epuck_i2c_device.h  real_epuck_i2c_sensor.h  real_epuck_ircom_actuator.cpp  real_epuck_ircom_actuator.h  real_epuck_ircom_sensor.cpp  real_epuck_ircom_sensor.h  real_epuck_light_sensor.cpp  real_epuck_light_sensor.h  real_epuck_main.cpp  real_epuck_micro_sensor.cpp  real_epuck_micro_sensor.h  real_epuck_omnidirectional_camera_sensor.cpp  real_epuck_omnidirectional_camera_sensor.h  real_epuck_proximity_sensor.cpp  real_epuck_proximity_sensor.h  real_epuck_range_and_bearing_actuator.cpp  real_epuck_range_and_bearing_actuator.h  real_epuck_range_and_bearing_sensor.cpp  real_epuck_range_and_bearing_sensor.h  real_epuck_rgb_leds_actuator.cpp  real_epuck_rgb_leds_actuator.h  real_epuck_serial_actuator.h  real_epuck_serial_sensor.h  real_epuck_virtual_camrab_actuator.cpp  real_epuck_virtual_camrab_actuator.h  real_epuck_virtual_camrab_sensor.cpp  (+3 more)
src/plugins/robots/e-puck/simulator/: battery_equipped_entity.h  epuck_entity.cpp  (+39 more)
src/plugins/robots/x-puck/: CMakeLists.txt  Interface.cmake  RealLibrary.cmake  SimLibrary.cmake  VisionTools.cmake
src/testing/: CMakeLists.txt  calibrate_epuck.cpp  calibrate_epuck.h  calibration_epuck.xml  client.cpp  client.h  console.argos  console.cpp  console.h  omnidirectional_camera_sensor.xml  rab_selective_test.cpp  rab_selective_test.h  rab_selective_test.xml  tam_experiment.xml  tam_experiment_epuck.cpp  tam_experiment_epuck.h  watcher.cpp  watcher.h  watcher.xml
src/testing/Epuck-Console/: .project
src/testing/Epuck-Console/src/: Main.java
(+223 files in other folders)
